--- a/backend/.env
+++ b/backend/.env
@@ -4,4 +4,8 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-SQL_DATABASE_URL="mysql://root:0000@localhost:3306/hotel_management_system"
+SQL_DATABASE_URL="mysql://root:rootpassword@localhost:3306/hotel_management_system"
+
+BCRYPT_PASSWORD=nasdno!sAOP\SSA
+SALT_ROUNDS= 15
+TOKEN=secret_token
