--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 SQL_DATABASE_URL="mysql://root:rootpassword@localhost:3306/hotel_management_system"
-
+NODE_ENV=dev
 BCRYPT_PASSWORD=nasdno!sAOP\SSA
 SALT_ROUNDS= 15
 TOKEN=secret_token
