--- a/backend/package.json
+++ b/backend/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon src/server.ts ",
+    "start": "cross-env NODE_ENV=dev nodemon src/server.ts ",
     "lint": "eslint \"src/**/*.ts\" ",
     "prettier": "npx prettier . --write",
-    "test": "dotenv -e .env.sample -- jest --coverage",
+    "test": "cross-env NODE_ENV=test dotenv -e .env.sample -- jest",
     "build": "tsc",
     "migration:create": "prisma migrate dev --create-only && dotenv -e .env.sample -- npx prisma migrate",
     "migrate": "prisma migrate dev  && dotenv -e .env.sample -- npx prisma migrate dev",
@@ -27,6 +27,8 @@
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "eslint": "^9.0.0",
     "express": "^4.19.2",
     "jest": "^29.7.0",
