--- a/backend/.env
+++ b/backend/.env
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-SQL_DATABASE_URL="mysql://root:rootpassword@localhost:3306/hotel_management_system"
+SQL_DATABASE_URL="mysql://root:1234@localhost:3306/hotel_management_system"
 NODE_ENV=dev
 BCRYPT_PASSWORD=nasdno!sAOP\SSA
 SALT_ROUNDS= 15
