add some super test cases for webSiteDashboard

--- a/adminDashboard/backend/package.json
+++ b/adminDashboard/backend/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=dev nodemon src/server.ts ",
     "lint": "eslint \"src/**/*.ts\" ",
     "prettier": "npx prettier . --write",
-    "test": "cross-env NODE_ENV=test dotenv -e .env.sample -- jest",
+    "test": "cross-env NODE_ENV=test dotenv -e .env.sample -- jest --runInBand",
     "build": "tsc",
     "migration:create": "prisma migrate dev --create-only && dotenv -e .env.sample -- npx prisma migrate",
     "migrate": "prisma migrate dev  && dotenv -e .env.sample -- npx prisma migrate dev",
