--- a/adminDashboard/backend/tsconfig.json
+++ b/adminDashboard/backend/tsconfig.json
@@ -107,7 +107,7 @@
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
     },
-    "include": ["."],
+    "include": [".", "./assets/**/*.ts"],
     "exclude": ["./build"]
     // "exclude": ["**/*.test.*" , "**/__mocks__/", "**/_tests__/*"]
 }
