--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.5",
+    "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -45,6 +46,7 @@
     "@types/typescript": "^2.0.0",
     "dotenv-cli": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "node-cron": "^3.0.3"
   }
 }
