--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -25,6 +25,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.5",
     "@types/node-cron": "^3.0.11",
+    "@types/nodemailer": "^6.4.14",
     "@types/supertest": "^6.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -47,6 +48,7 @@
     "dotenv-cli": "^7.4.1",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.13"
   }
 }
