--- a/website/frontend/package.json
+++ b/website/frontend/package.json
@@ -23,6 +23,7 @@
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
