--- a/website/frontend/package.json
+++ b/website/frontend/package.json
@@ -6,8 +6,10 @@
     "@demark-pro/react-booking-calendar": "^3.0.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.17",
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.32",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
