--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -49,6 +49,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "paypal-rest-sdk": "^1.8.1"
   }
 }
