--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -47,6 +47,7 @@
     "@types/typescript": "^2.0.0",
     "dotenv-cli": "^7.4.1",
     "generate-index-file": "^1.3.0",
+    "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
