--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -44,6 +44,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "@img/sharp-win32-x64": "^0.33.4",
     "@prisma/client": "^5.13.0",
     "@types/typescript": "^2.0.0",
     "dotenv-cli": "^7.4.1",
@@ -53,6 +54,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
-    "paypal-rest-sdk": "^1.8.1"
+    "paypal-rest-sdk": "^1.8.1",
+    "sharp": "^0.33.4"
   }
 }
