--- a/website/frontend/package.json
+++ b/website/frontend/package.json
@@ -10,7 +10,8 @@
     "@fontsource/roboto": "^5.0.12",
     "@mui/icons-material": "^5.15.19",
     "@mui/joy": "^5.0.0-beta.32",
-    "@mui/material": "^5.15.15",
+    "@mui/lab": "^5.0.0-alpha.170",
+    "@mui/material": "^5.15.20",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "@mui/x-date-pickers": "^7.2.0",
     "@testing-library/jest-dom": "^5.17.0",
