--- a/website/backend/package.json
+++ b/website/backend/package.json
@@ -21,6 +21,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/faker": "^6.6.9",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/multer": "^1.4.11",
@@ -34,6 +35,7 @@
     "dotenv": "^16.4.5",
     "eslint": "^9.0.0",
     "express": "^4.19.2",
+    "faker": "^6.6.6",
     "jest": "^29.7.0",
     "nodemon": "^3.1.0",
     "prettier": "^3.2.5",
@@ -44,6 +46,7 @@
     "typescript": "^5.4.4"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@img/sharp-win32-x64": "^0.33.4",
     "@prisma/client": "^5.13.0",
     "@types/typescript": "^2.0.0",
